salesforce-project-manager/force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <label>顧客</label>
    <pluralLabel>顧客</pluralLabel>
    <nameField>
        <label>顧客名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>プロジェクトの依頼元となる顧客・取引先企業を管理するオブジェクト。</description>
</CustomObject>