salesforce-project-manager/force-app/main/default/objects/Client__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メールアドレス</label>
    <description>顧客の主要な連絡先メールアドレス</description>
    <inlineHelpText>顧客担当者の主要なメールアドレスを入力してください</inlineHelpText>
    <type>Email</type>
</CustomField>