salesforce-project-manager/force-app/main/default/objects/Client__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>業種</label>
    <description>顧客企業が属する業界・業種</description>
    <inlineHelpText>顧客企業の主要事業分野を選択してください</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT・テクノロジー</fullName>
            </value>
            <value>
                <fullName>製造業</fullName>
            </value>
            <value>
                <fullName>金融・保険</fullName>
            </value>
            <value>
                <fullName>小売・流通</fullName>
            </value>
            <value>
                <fullName>医療・ヘルスケア</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <default>true</default>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>