salesforce-project-manager/force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>電話番号</label>
    <description>顧客の主要な電話番号</description>
    <inlineHelpText>顧客の代表電話番号を入力してください</inlineHelpText>
    <type>Phone</type>
</CustomField>